<resources>
    <string name="app_name">Re-Usable Components Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shared Components Demo</string>
    <string name="nav_header_subtitle">Please select a component below to demo:</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_deviceinfo">Device Info Utility</string>
    <string name="menu_cameracapture">Camera Utility</string>
    <string name="menu_geofence">Geo Fencing</string>
    <string name="menu_locationservices">Elastic Search</string>
    <string name="menu_scanner">Barcode Scanner</string>
    <string name="menu_encryptionanddecryption">Data Security Services</string>
    <string name="menu_network_services">Network Api Services</string>
    <string name="menu_compass">Compass User Interface</string>
    <string name="menu_ui_component">UI Utility Component</string>
    <string name="conccetivity_lost_text">No network to connect!</string>
    <string name="loading_mgs">Wait data Loading …</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retrofit">Retrofit</string>
    <string name="volley">Volley</string>
    <string name="geo_fencing_map">Geo-Fencing Map</string>
    <string name="geo_fencing_callback">Geo Fencing Callback</string>
    <string-array name="algorithm_list">
        <item>Select Algorithm</item>
        <item>SHA 256</item>
        <item>Base 64</item>
        <item>MD5 Digest</item>
        <item>aes 128 algorithm</item>
        <item>RSA algorithm</item>
    </string-array>


</resources>