<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_deviceinfo"
            android:icon="@mipmap/arrow_icon_right"
            android:title="@string/menu_deviceinfo" />
        <item
            android:id="@+id/nav_camera_capture"
            android:icon="@mipmap/arrow_icon_right"
            android:title="@string/menu_cameracapture" />
        <!--<item
            android:id="@+id/nav_fragment_service"
            android:icon="@drawable/arrow_blue"
            android:title="@string/menu_locationservices" />-->
        <item
            android:id="@+id/nav_fragment_scanner"
            android:icon="@mipmap/arrow_icon_right"
            android:title="@string/menu_scanner" />
        <item
            android:id="@+id/nav_fragment_network"
            android:icon="@mipmap/arrow_icon_right"
            android:title="@string/menu_network_services" />

        <item
            android:id="@+id/nav_fragment_component_ui"
            android:icon="@mipmap/arrow_icon_right"
            android:title="@string/menu_ui_component" /> />
        <item
            android:id="@+id/nav_fragment_encryption"
            android:icon="@mipmap/arrow_icon_right"
            android:title="@string/menu_encryptionanddecryption" />
        <item
            android:id="@+id/nav_compass"
            android:icon="@mipmap/arrow_icon_right"
            android:title="@string/menu_compass" />
    </group>
</menu>